add common module

--- a/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-interface/pom.xml
+++ b/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-interface/pom.xml
@@ -28,4 +28,12 @@
 
   <artifactId>dubbo-samples-spring-boot-interface</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-samples-spring-boot-common</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+  </dependencies>
+
 </project>
