--- a/1-basic/dubbo-samples-spring-boot/pom.xml
+++ b/1-basic/dubbo-samples-spring-boot/pom.xml
@@ -49,6 +49,7 @@
     <module>dubbo-samples-spring-boot-interface</module>
     <module>dubbo-samples-spring-boot-provider</module>
     <module>dubbo-samples-spring-boot-consumer</module>
+    <module>dubbo-samples-spring-boot-common</module>
   </modules>
 
   <dependencyManagement>
