--- a/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-provider/src/main/resources/application.yml
+++ b/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-provider/src/main/resources/application.yml
@@ -6,9 +6,9 @@ dubbo:
         qos-enable: false
         logger: slf4j
     config-center:
-        address: nacos://dubbo.nacos:38848
+        address: nacos://150.158.15.11:38848
         username: nacos
-        password: app@qwe123
+        password: 123456
         namespace: dev
         group: dubbo
     protocols:
@@ -20,17 +20,17 @@ dubbo:
             port: 38008
             heartbeat: 36000000
     registry:
-        address: nacos://dubbo.nacos:38848
+        address: nacos://150.158.15.11:38848
         username: nacos
-        password: app@qwe123
+        password: 123456
         parameters:
             namespace: dev
         group: dubbo
         cluster: default
     metadata-report:
-        address: nacos://dubbo.nacos:38848
+        address: nacos://150.158.15.11:38848
         username: nacos
-        password: app@qwe123
+        password: 123456
         parameters:
             namespace: dev
         group: dubbo
