--- a/2-advanced/dubbo-samples-triple-servlet/pom.xml
+++ b/2-advanced/dubbo-samples-triple-servlet/pom.xml
@@ -37,7 +37,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!--<dubbo.version>3.3.0-beta.5</dubbo.version>-->
-        <dubbo.version>3.3.0-beta.6-SNAPSHOT</dubbo.version>
+        <dubbo.version>3.3.0</dubbo.version>
         <spring-boot.version>3.2.3</spring-boot.version>
 
         <maven_os_plugin_version>1.7.1</maven_os_plugin_version>
