--- a/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-interface/pom.xml
+++ b/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-interface/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.dubbo</groupId>
     <artifactId>dubbo-samples-spring-boot</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
