--- a/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-provider/pom.xml
+++ b/1-basic/dubbo-samples-spring-boot/dubbo-samples-spring-boot-provider/pom.xml
@@ -22,11 +22,12 @@
   <parent>
     <groupId>org.apache.dubbo</groupId>
     <artifactId>dubbo-samples-spring-boot</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>dubbo-samples-spring-boot-provider</artifactId>
+  <version>2.0</version>
 
   <dependencies>
     <dependency>
