--- a/1-basic/dubbo-samples-spring-boot/pom.xml
+++ b/1-basic/dubbo-samples-spring-boot/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.apache.dubbo</groupId>
   <artifactId>dubbo-samples-spring-boot</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.1</version>
   <packaging>pom</packaging>
 
   <name>Dubbo Samples Spring Boot</name>
