--- a/2-advanced/dubbo-samples-gateway/dubbo-samples-gateway-apisix/dubbo-samples-gateway-apisix-triple/src/main/resources/application.yml
+++ b/2-advanced/dubbo-samples-gateway/dubbo-samples-gateway-apisix/dubbo-samples-gateway-apisix-triple/src/main/resources/application.yml
@@ -14,16 +14,20 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 server:
-    port: 8080
+  port: 8080
 dubbo:
-    application:
-        logger: slf4j
-        name: gateway-apisix-triple
-        qos-port: 33333
-    registry:
-        address: nacos://${nacos.address:127.0.0.1}:8848
-        username: nacos
-        password: nacos
-    protocol:
-        name: tri
-        port: 50052
+  application:
+    name: gateway-apisix-triple
+    logger: slf4j
+    qos-enable: false
+  registry:
+    address: nacos://150.158.15.11:38848
+    username: nacos
+    password: 123456
+    parameters:
+      namespace: dev
+    group: dubbo
+    cluster: default
+  protocol:
+    name: tri
+    port: 50052
